Closed Bug 351262 Opened 19 years ago Closed 19 years ago

DHTML state changes no longer being fired

Categories

(Core :: Disability Access APIs, defect)

1.8 Branch
x86
All
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

References

Details

(Keywords: fixed1.8.1, regression, Whiteboard: Low risk, this is a certain fix. Very much needed to maintain DHTML a11y backwards compatibility.)

Attachments

(1 file)

We throw out aaa: property changes if there is no role. However, the logic was accidentally reversed by checkin for bug 342979. This blocks a sec508 bug.
Attachment #236665 - Flags: superreview?(neil)
Attachment #236665 - Flags: review?(ginn.chen)
Flags: blocking1.8.1?
Whiteboard: Low risk, this is a certain fix. Very much needed to maintain DHTML a11y backwards compatibility.
Attachment #236665 - Flags: review?(ginn.chen) → review+
Attachment #236665 - Flags: superreview?(neil) → superreview+
Attachment #236665 - Flags: approval1.8.1?
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Comment on attachment 236665 [details] [diff] [review] Reverse logic of early return a=schrep for drives for acc only regression.
Attachment #236665 - Flags: approval1.8.1? → approval1.8.1+
Keywords: fixed1.8.1
Flags: blocking1.8.1?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: