Bug 351262. Regression in DHTML state change events. r=ginn.chen, sr=neil